adding body component and tweaks header navbar

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,18 +1,7 @@
 <main class="main">
   <app-header> </app-header>
   <app-navbar></app-navbar>
-  <main class="container">
-    <div class="bg-body-tertiary p-5 rounded">
-      <h1>Navbar example</h1>
-      <p class="lead">
-        This example is a quick exercise to illustrate how the top-aligned navbar works. As you
-        scroll, this navbar remains in its original position and moves with the rest of the page.
-      </p>
-      <a class="btn btn-lg btn-primary" href="/docs/5.3/components/navbar" role="button"
-        >View navbar docs »</a
-      >
-    </div>
-  </main>
+  <app-body></app-body>
 
   <div class="container">
     <footer class="py-5">
