--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,33 +1,33 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-position">
-  <div class="container-fluid d-flex align-items-center justify-content-between">
-    <a class="d-flex align-items-center mb-1 mb-lg-0 text-decoration-none">
-      <img
-        class="bi me-2"
-        width="60"
-        height="60"
-        src="teather_ticket_logo.png"
-        alt=""
-        class="img"
-      />
-    </a>
-
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.google.com/">Link</a>
-        </li>
+<nav class="navbar navbar-expand-lg bg-body-tertiary custom-navbar">
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarContent"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <!-- Left Navigation + Divider -->
+      <ul class="navbar-nav d-flex align-items-center nav-left">
+        <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">admin</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">user</a></li>
+        <!-- Vertical Divider -->
+        <div class="vr mx-3 d-none d-lg-block"></div>
       </ul>
+      <!-- Center Search Bar -->
+      <form class="search-bar mt-xxl-auto" role="search">
+        <input
+          class="form-control d-flex search-input"
+          type="search"
+          placeholder="Search tickets..."
+          aria-label="Search"
+        />
+        <button class="search-icon-btn" type="submit"><i class="bi bi-search"></i></button>
+      </form>
     </div>
-
-    <form 
-      class="d-flex col-md-8" 
-      style="flex: 12;" 
-      role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-      <button class="btn btn-outline-info" type="submit">Search</button>
-    </form>
   </div>
 </nav>
