Adding user login page

--- a/src/app/pages/sign-in-page-admin/login-page.html
+++ b/src/app/pages/sign-in-page-admin/login-page.html
@@ -19,7 +19,7 @@
 
       <button
         class="btn bg-gradient bg-opacity-75 w-100"
-        style="background-color: #1B263B; color: white"
+        style="background-color: #1b263b; color: white"
       >
         Login
       </button>
