--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <main>
-    <app-login-page></app-login-page>
+  <!-- <app-login-page></app-login-page> -->
+  <app-user-login-page></app-user-login-page>
 </main>
 <router-outlet></router-outlet>
