Adding user sign up page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
 <main>
+  <app-user-sign-up></app-user-sign-up>
   <!-- <app-login-page></app-login-page> -->
-  <app-user-login-page></app-user-login-page>
+  <!-- <app-user-login-page></app-user-login-page> -->
 </main>
 <router-outlet></router-outlet>
