--- a/src/app/login/sign-in-page-user/user-login-page.html
+++ b/src/app/login/sign-in-page-user/user-login-page.html
@@ -1,20 +1,8 @@
-<div
-  class="default-font bg-login container-fluid min-vh-100 align-items-center justify-content-center"
->
+<div class="default-font bg-login container-fluid min-vh-100 align-items-end justify-content-center">
   <div class="row vh-100">
-    <!-- Thumbnail -->
-    <div class="col-lg-8 col-sm-12 d-none d-lg-block p-0">
-      <!-- <img
-        src="/login-page-orchestra-compressed.jpg"
-        alt="thumbnailUser"
-        class="img-fluid w-100 h-100 object-fit-cover"
-      /> -->
-    </div>
-
     <!-- Form -->
     <div
-      class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center bg-dark shadow-lg bg-opacity-25 backdrop-blur-xl border-0"
-    >
+      class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center bg-dark shadow-lg bg-opacity-25 backdrop-blur-xl border-0">
       <div class="w-50">
         <h2 class="mb-4 fw-bold text-white">Sign In</h2>
 
@@ -30,10 +18,7 @@
           </div>
 
           <div class="d-flex justify-content-center w-100 mb-3">
-            <button
-              class="btn bg-gradient bg-opacity-75 w-50"
-              style="background-color: #1b263b; color: white"
-            >
+            <button class="btn bg-gradient bg-opacity-75 w-50" style="background-color: #1b263b; color: white">
               Sign In
             </button>
           </div>
