--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <main>
-  <app-user-sign-up></app-user-sign-up>
-  <!-- <app-login-page></app-login-page> -->
-  <!-- <app-user-login-page></app-user-login-page> -->
+   <!-- <app-user-sign-up></app-user-sign-up> -->
+   <!-- <app-user-login-page></app-user-login-page> -->
+   <!-- <app-login-page></app-login-page> -->
+   <app-event-orginizer-login></app-event-orginizer-login>
 </main>
 <router-outlet></router-outlet>
