--- a/src/app/login/sign-in-page-user/user-login-page.html
+++ b/src/app/login/sign-in-page-user/user-login-page.html
@@ -1,32 +1,45 @@
-<div class="default-font bg-login container-fluid min-vh-100 align-items-end justify-content-center">
-  <div class="row vh-100">
-    <!-- Form -->
-    <div
-      class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center bg-dark shadow-lg bg-opacity-25 backdrop-blur-xl border-0">
-      <div class="w-50">
-        <h2 class="mb-4 fw-bold text-white">Sign In</h2>
-
-        <form action="">
-          <div class="mb-3">
-            <label for="username" class="form-label text-white">Username</label>
-            <input type="text" id="username" class="form-control form-control-sm" />
-          </div>
-
-          <div class="mb-4">
-            <label for="password" class="form-label text-white">Password</label>
-            <input type="password" id="password" class="form-control form-control-sm" />
-          </div>
-
-          <div class="d-flex justify-content-center w-100 mb-3">
-            <button class="btn bg-gradient bg-opacity-75 w-50" style="background-color: #1b263b; color: white">
-              Sign In
-            </button>
-          </div>
-          <div class="d-flex justify-content-center w-100 text-white">
-            <p>Not have an account yet? <a href="">Sign Up.</a></p>
-          </div>
-        </form>
+<div class="default-font container-fluid min-vh-100 bg-black">
+   <div class="row vh-100">
+      <div class="col-lg-8 d-none d-lg-block p-0">
+         <img src="orchestra-blue.jpg" alt="bgLoginUser" class="img-fluid h-100 w-100 object-fit-cover rounded-4">
       </div>
-    </div>
-  </div>
+      <!-- Form -->
+      <div
+         class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center bg-black shadow-lg border-0 rounded-end-5">
+         <div style="width: 55%;">
+            <div class="w-100 text-center">
+               <h1 class="fw-bold text-white">Sign In</h1>
+               <p class="mb-5 text-white">Enter your credentials to access your account</p>
+            </div>
+
+            <form action="">
+               <div class="mb-3">
+                  <label for="username" class="form-label text-white">Username</label>
+                  <input type="text" id="username" class="form-control form-control-sm bg-dark border-dark" />
+               </div>
+
+               <div class="mb-2">
+                  <label for="password" class="form-label text-white">Password</label>
+                  <input type="password" id="password" class="form-control form-control-sm bg-dark border-dark" />
+               </div>
+
+               <div class="form-check custom-checkbox" style="margin-bottom: 2rem;">
+                  <input class="form-check-input me-2" type="checkbox" id="remember" />
+                  <label class="form-check-label text-white m-auto fw-light fst-italic" for="remember">Remember
+                     me</label>
+               </div>
+
+               <div class="d-flex justify-content-center w-100 mb-3">
+                  <button class="btn bg-opacity-75 w-100" style="background-color: #feb706; color: black">
+                     Sign In
+                  </button>
+               </div>
+               <div class="d-flex justify-content-center w-100 text-white">
+                  <p>Not have an account yet? <a href="">Sign Up.</a></p>
+               </div>
+            </form>
+         </div>
+         >>>>>>> Stashed changes
+      </div>
+   </div>
 </div>
