berhasil merge, perubahan styling login tidak terbarui

--- a/src/app/home/body/body.html
+++ b/src/app/home/body/body.html
@@ -1,55 +1,34 @@
 <section class="ra-responsive-layout r-mt-70">
-  <div class="swiper-wrapper-center">
-    <!-- animasi gambar swiper -->
-    <swiper-container
-      class="mySwiper"
-      slides-per-view="1"
-      space-between="30"
-      loop="false"
-      autoplay-delay="3000"
-      autoplay-disable-on-interaction="false"
-      speed="800"
-      centered-slides="true"
-    >
-      <swiper-slide *ngFor="let slide of swiperSlides">
-        <a [href]="slide.link" target="_blank" class="slide-link">
-          <div
-            class="slide-bg"
-            [style.backgroundImage]="'url(' + slide.img + ')'"
-            role="img"
-            aria-label="carousel slide"
-          ></div>
-        </a>
-      </swiper-slide>
-    </swiper-container>
-  </div>
+   <div class="swiper-wrapper-center">
+      <!-- animasi gambar swiper -->
+      <swiper-container class="mySwiper" slides-per-view="1" space-between="30" loop="false" autoplay-delay="3000"
+         autoplay-disable-on-interaction="false" speed="800" centered-slides="true">
+         <swiper-slide *ngFor="let slide of swiperSlides">
+            <a [href]="slide.link" target="_blank" class="slide-link">
+               <div class="slide-bg" [style.backgroundImage]="'url(' + slide.img + ')'" role="img"
+                  aria-label="carousel slide"></div>
+            </a>
+         </swiper-slide>
+      </swiper-container>
+   </div>
 </section>
 
 <section class="cards-section">
-  <div class="cards-header">
-    <h2>Event</h2>
-  </div>
-  <div class="cards-grid">
-    <div
-      class="card"
-      *ngFor="let s of getGridSlides(); let i = index"
-      [class.highlight]="i < 3"
-      (click)="goTo(s.index)"
-      (keydown.enter)="goTo(s.index)"
-      role="button"
-      tabindex="0"
-    >
-      <div class="card-media" aria-hidden="true">
-        <img [src]="s.data.img" class="card-image" alt="event" />
-        <div class="overlay">
-          <h4 class="card-title">{{ s.data.title }}</h4>
-          <p class="card-date">{{ s.data.date }}</p>
-          <p class="card-location">{{ s.data.description }}</p>
-          <div class="card-price">{{ s.data.price }}</div>
-        </div>
+   <div class="cards-header">
+      <h2>Event</h2>
+   </div>
+   <div class="cards-grid">
+      <div class="card" *ngFor="let s of getGridSlides(); let i = index" [class.highlight]="i < 3"
+         (click)="goTo(s.index)" (keydown.enter)="goTo(s.index)" role="button" tabindex="0">
+         <div class="card-media" aria-hidden="true">
+            <img [src]="s.data.img" class="card-image" alt="event" />
+            <div class="overlay">
+               <h4 class="card-title">{{ s.data.title }}</h4>
+               <p class="card-date">{{ s.data.date }}</p>
+               <p class="card-location">{{ s.data.description }}</p>
+               <div class="card-price">{{ s.data.price }}</div>
+            </div>
+         </div>
       </div>
-    </div>
-  </div>
+   </div>
 </section>
-
-
