--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,7 @@
-<<<<<<< HEAD
-<main>
-   <app-user-sign-up></app-user-sign-up>
-   <!-- <app-login-page></app-login-page> -->
-   <!-- <app-user-login-page></app-user-login-page> -->
-</main>
-<router-outlet></router-outlet>
-=======
 <main class="main">
-  <app-header> </app-header>
-  <router-outlet />
-  <app-footer></app-footer>
+   <!-- <app-header> </app-header> -->
+   <!-- <app-footer></app-footer> -->
+   <!-- <app-login-page></app-login-page> -->
+   <app-user-login-page></app-user-login-page>
 </main>
-
->>>>>>> origin/adri/pages/home
+<router-outlet />
