Revert "adding EO login page and redesign all login"
This reverts commit 0547be860d7f6f70218f4011cbdc80f5ee40eda3.

--- a/src/app/login/sign-in-page-admin/login-page.html
+++ b/src/app/login/sign-in-page-admin/login-page.html
@@ -1,23 +1,24 @@
-<div class="p-4 default-font bg-login d-flex min-vh-100 align-items-center justify-content-center">
-   <!-- box for center form -->
-   <div class="card p-4 shadow-lg bg-black border-0" style="max-width: 300px; width: 100%;">
+<div class="default-font bg-login d-flex min-vh-100 align-items-center justify-content-center">
+  <!-- box for center form -->
+  <div class="card p-4 shadow-lg bg-dark bg-opacity-25 backdrop-blur-xl border-0"
+    style="max-width: 280px; width: 100%; max-height: 700px; height: 100%">
 
-      <h4 class="mb-4 text-center text-white" style="font-weight: bolder">Admin Login</h4>
-      <!-- box form -->
-      <form>
-         <div class="mb-3">
-            <label class="form-label text-white">Username</label>
-            <input type="text" class="form-control form-control-sm bg-dark border-dark" />
-         </div>
+    <h4 class="mb-4 text-center text-white" style="font-weight: bolder">Admin Login</h4>
+    <!-- box form -->
+    <form>
+      <div class="mb-3">
+        <label class="form-label text-white">Username</label>
+        <input type="text" class="form-control form-control-sm" />
+      </div>
 
-         <div class="mb-4">
-            <label class="form-label text-white">Password</label>
-            <input type="password" class="form-control form-control-sm bg-dark border-dark" />
-         </div>
+      <div class="mb-4">
+        <label class="form-label text-white">Password</label>
+        <input type="password" class="form-control form-control-sm" />
+      </div>
 
-         <button class="btn w-100" style="background-color: #feb706; color: black">
-            Login
-         </button>
-      </form>
-   </div>
+      <button class="btn bg-gradient bg-opacity-75 w-100" style="background-color: #1b263b; color: white">
+        Login
+      </button>
+    </form>
+  </div>
 </div>
