--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,6 @@
 <main>
-   <!-- <app-user-sign-up></app-user-sign-up> -->
-   <!-- <app-user-login-page></app-user-login-page> -->
-   <!-- <app-login-page></app-login-page> -->
-   <app-event-orginizer-login></app-event-orginizer-login>
+  <app-user-sign-up></app-user-sign-up>
+  <!-- <app-login-page></app-login-page> -->
+  <!-- <app-user-login-page></app-user-login-page> -->
 </main>
 <router-outlet></router-outlet>
