--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 <main class="main">
   <app-header> </app-header>
-  <router-outlet />
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </main>
 
