--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,12 +1,14 @@
 <div class="custom-footer">
-  <div class="container">
-    <div class="d-flex justify-content-between align-items-center">
+  <div class="container-fluid px-0">
+    <div class="d-flex align-items-center">
       <div class="copyright">© 2025 Company, Inc. All rights reserved.</div>
-      <nav class="footer-nav">
-        <ul class="nav-list">
-          <li><a href="#" class="nav-link">Home</a></li>
-          <li><a href="/about" class="nav-link">About</a></li>
-          <li><a href="/login" class="nav-link">Login</a></li>
+
+      <!-- `ms-auto` pushes this nav to the extreme right of the viewport -->
+      <nav class="footer-nav ms-auto">
+        <ul class="nav">
+          <li class="nav-item"><a class="nav-link px-2" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link px-2" href="/about">About</a></li>
+          <li class="nav-item"><a class="nav-link px-2" href="/login">Login</a></li>
         </ul>
       </nav>
     </div>
