--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,28 +1,46 @@
 <header class="custom-header">
-  <div class="container">
-    <div class="d-flex justify-content-between align-items-center">
-      <div class="brand">
-        Bagus jOMOK
+  <div class="container-fluid px-0">
+    <div class="row align-items-center header-row gx-3">
+      <div class="col-auto ms-4">
+        <div class="brand">Bagus jOMOK</div>
       </div>
-      <nav class="main-nav">
-        <ul class="nav-list">
-          <li><a href="#" class="nav-link active">Home</a></li>
-          <li><a href="/about" class="nav-link">About</a></li>
-          <li><a href="/login" class="nav-link">Login</a></li>
-          <li><a href="/signup" class="nav-link">Sign Up</a></li>
-        </ul>
-        <form class="search-form" role="search">
+
+      <div class="col center-nav">
+        <nav class="main-nav">
+          <ul class="nav-list">
+            <li><a href="#" class="nav-link rounded"><span class="nav-text">Home</span></a></li>
+            <li><a href="/about" class="nav-link rounded"><span class="nav-text">About</span></a></li>
+            <li><a href="/login" class="nav-link rounded"><span class="nav-text">Login</span></a></li>
+            <li><a href="/signup" class="nav-link rounded"><span class="nav-text">Sign Up</span></a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="col-auto">
+        <div class="search-form" role="search">
           <input
             class="search-input"
             type="search"
-            placeholder="Search tickets..."
-            aria-label="Search"
+            [(ngModel)]="query"
+            (input)="onSearchInput()"
+            placeholder="Search events..."
+            aria-label="Search events"
+            autocomplete="off"
           />
-          <button class="search-btn" type="submit">
+          <button class="search-btn" type="button" (click)="onSearchInput()">
             <i class="bi bi-search"></i>
           </button>
-        </form>
-      </nav>
+          @if (query.trim().length && suggestions.length) {
+          <ul class="search-suggestions">
+            @for (s of suggestions; track s) {
+            <li (click)="selectSuggestion(s)" tabindex="0">
+              {{ s.title }}
+            </li>
+            }
+          </ul>
+          }
+        </div>
+      </div>
     </div>
   </div>
 </header>
