bug home page old

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,8 +3,9 @@
    <!-- <app-eo-login-page></app-eo-login-page> -->
    <!-- <app-login-page></app-login-page> -->
    <!-- <app-user-login-page></app-user-login-page> -->
-   <app-user-sign-up></app-user-sign-up>
-   <!-- <app-header></app-header> -->
+   <app-header></app-header>
+   <!-- <app-body></app-body> -->
    <!-- <app-footer></app-footer> -->
+   <!-- <app-user-sign-up></app-user-sign-up> -->
 </main>
 <router-outlet />
