coba buat ulang header home page

--- a/src/app/footer/footer.css
+++ b/src/app/footer/footer.css
@@ -73,3 +73,17 @@
   .copyright { text-align: center; }
   .nav-list { gap: 12px; }
 }
+
+
+
+
+
+
+/* Bagus Ver */
+.max-vh {
+   height: 50vh;
+}
+
+.cf-width {
+   width: 85%;
+}
