--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,16 +1,12 @@
-<div class="custom-footer">
-   <div class="container-fluid px-0">
-      <div class="d-flex align-items-center">
-         <div class="copyright text-white">© 2025 Company, Inc. All rights reserved.</div>
-
-         <!-- `ms-auto` pushes this nav to the extreme right of the viewport -->
-         <nav class="footer-nav ms-auto">
-            <ul class="nav">
-               <li class="nav-item"><a class="nav-link px-2 text-white" href="#">Home</a></li>
-               <li class="nav-item"><a class="nav-link px-2 text-white" href="/about">About</a></li>
-               <li class="nav-item"><a class="nav-link px-2 text-white" href="/login">Login</a></li>
-            </ul>
-         </nav>
+<div class="d-flex justify-content-center container-fluid bg-dark max-vh text-white">
+   <div class="w-75 h-100 bg-primary text-white row">
+      <div class="col-xl-3 col-sm-6 pt-4" style="background-color: red;">
+         <div class="w-100 h-75 bg-black">
+            
+         </div>
       </div>
+      <div class="col-xl-3 col-sm-6" style="background-color: green;"></div>
+      <div class="col-xl-3 col-sm-6" style="background-color: blue;"></div>
+      <div class="col-xl-3 col-sm-6" style="background-color: purple;"></div>
    </div>
 </div>
