--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -12,8 +12,8 @@
                <ul class="nav-list">
                   <li><a href="#" class="nav-link rounded"><span class="nav-text">Home</span></a></li>
                   <li><a href="/about" class="nav-link rounded"><span class="nav-text">About</span></a></li>
-                  <li (click)="goToLogin()"><a class="nav-link rounded"><span class="nav-text">Login</span></a></li>
-                  <li (click)="goToSignUp()"><a class="nav-link rounded"><span class="nav-text">Sign Up</span></a></li>
+                  <li><a href="/about" class="nav-link rounded"><span class="nav-text">FAQ</span></a></li>
+                  <li><a href="/about" class="nav-link rounded"><span class="nav-text">Contact Us</span></a></li>
                </ul>
             </nav>
          </div>
@@ -34,6 +34,12 @@
                   }
                </ul>
                }
+            </div>
+            <div>
+               <ul class="nav-list">
+                  <li (click)="goToLogin()"><a class="nav-link rounded"><span class="nav-text">Login</span></a></li>
+                  <li (click)="goToSignUp()"><a class="nav-link rounded"><span class="nav-text">Sign Up</span></a></li>
+               </ul>
             </div>
          </div>
       </div>
