--- a/src/app/login/sign-up-page-user/user-sign-up.html
+++ b/src/app/login/sign-up-page-user/user-sign-up.html
@@ -2,7 +2,7 @@
    <div class="row vh-100">
       <div class="col-lg-8 d-none d-lg-block p-0">
          <img src="/login-image/orchestra-blue-dark.jpeg" alt="bgLoginUser"
-            class="img-fluid h-100 w-100 object-fit-cover rounded-4" style="object-position: right center;">
+            class="img-fluid h-100 w-100 object-fit-cover rounded-end-4" style="object-position: right center;">
       </div>
       <!-- Form -->
       <div
