--- a/src/app/home/body/body.html
+++ b/src/app/home/body/body.html
@@ -1,4 +1,4 @@
-<section class="body-padding ra-responsive-layout r-mt-70">
+<section class="padding-body ra-responsive-layout r-mt-70">
    <div class="swiper-wrapper-center">
       <!-- main carousel -->
       <swiper-container class="mySwiper" slides-per-view="1" space-between="30" loop="false" autoplay-delay="3000"
