--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,4 +1,4 @@
-<header class="custom-header">
+<header class="custom-header position-fixed fixed-top">
   <div class="container-fluid px-0">
     <div class="row align-items-center header-row gx-3">
       <div class="col-auto ms-4">
