progress redesign header 80%

--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center container-fluid bg-dark max-vh text-white">
-   <div class="w-75 h-100 bg-primary text-white row">
+<div class="row d-flex justify-content-center container-fluid bg-dark max-vh text-white">
+   <div class="col-12 w-75 h-footer-content bg-primary text-white row">
       <div class="col-xl-3 col-sm-6 pt-4" style="background-color: red;">
          <div class="w-100 h-75 bg-black">
             
@@ -8,5 +8,8 @@
       <div class="col-xl-3 col-sm-6" style="background-color: green;"></div>
       <div class="col-xl-3 col-sm-6" style="background-color: blue;"></div>
       <div class="col-xl-3 col-sm-6" style="background-color: purple;"></div>
+   </div>
+   <div class="col-12 w-75 h-footer-copyRight bg-black">
+      
    </div>
 </div>
