--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,52 +1,53 @@
 <div class="default-font g-0 row container-fluid h-header-page bg-black underline-header">
    <!-- Logo Web / Judul -->
-   <div class="col-3"></div>
+   <div class="col-3 d-flex align-items-center justify-content-start">
+      <div class="ps-5 pt-3">
+         <h3>CONCERT TICKET</h3>
+      </div>
+   </div>
 
    <!-- list navbar, search bar, login -->
    <div class="row col-9 p-0 g-0">
 
       <!-- List -->
       <div class="col-8 p-0">
-         <div class="h-100 pb-2 d-flex justify-content-center align-items-end">
+         <div class="h-100 pb-3 d-flex justify-content-center align-items-end">
             <ul class="d-flex gap-3 list-group list-group-horizontal list-inline text-white">
-               <li class="fw-bold px-4 py-2"><a>Home</a></li>
-               <li class="fw-bold px-4 py-2"><a>About</a></li>
-               <li class="fw-bold px-4 py-2"><a>FAQ</a></li>
-               <li class="fw-bold px-4 py-2"><a>Contact Us</a></li>
+               <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">HOME</span></a></li>
+               <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">TICKETS</span></a></li>
+               <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">FAQ</span></a></li>
+               <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">CONTACT US</span></a></li>
+               <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">ABOUT</span></a></li>
             </ul>
          </div>
       </div>
 
       <!-- Search Bar -->
-      <div class="col-3 p-2 d-flex align-items-end">
-         <form class="d-flex" role="search">
-            <input class="form-control search-bar" type="search" placeholder="Search..." aria-label="Search" />
-            <button class="search-icon">
-               <img src="/logos/search.svg" alt="search-btn">
+      <div class="col-2 d-flex align-items-end justify-content-start">
+         <div class="search-form p-sb" role="search">
+            <input class="search-input" type="search" [(ngModel)]="query" (input)="onSearchInput()"
+               placeholder="Search events..." aria-label="Search events" autocomplete="off" />
+            <button class="search-btn pb-4" type="button" (click)="onSearchInput()">
+               <i class="bi bi-search"></i>
             </button>
-         </form>
+            @if (query.trim().length && suggestions.length) {
+            <ul class="search-suggestions">
+               @for (s of suggestions; track s) {
+               <li (click)="selectSuggestion(s)" tabindex="0">
+                  {{ s.title }}
+               </li>
+               }
+            </ul>
+            }
+         </div>
       </div>
 
       <!-- Login/Sign up -->
-      <div class="col-1 p-0"></div>
+      <div class="col-2 p-0 d-flex align-items-end justify-content-end">
+         <div class=" pe-3 p-sb">
+            <button type="button" class="btn btn-warning button-size me-2">Login</button>
+            <button type="button" class="btn btn-outline-warning button-size">Sign up</button>
+         </div>
+      </div>
    </div>
 </div>
-
-<!-- <div class="col-auto">
-   <div class="search-form" role="search">
-      <input class="search-input" type="search" [(ngModel)]="query" (input)="onSearchInput()"
-         placeholder="Search events..." aria-label="Search events" autocomplete="off" />
-      <button class="search-btn" type="button" (click)="onSearchInput()">
-         <i class="bi bi-search"></i>
-      </button>
-      @if (query.trim().length && suggestions.length) {
-      <ul class="search-suggestions">
-         @for (s of suggestions; track s) {
-         <li (click)="selectSuggestion(s)" tabindex="0">
-            {{ s.title }}
-         </li>
-         }
-      </ul>
-      }
-   </div>
-</div> -->
